--- a/index.html
+++ b/index.html
@@ -211,7 +211,9 @@
 
   .btn-primary {
     font-family: 'Inter', sans-serif;
-    font-size: 12px;
+    font-size: 13px;
+    line-height: 1.7;
+    letter-spacing: 0.2px;
     font-weight: 700;
     letter-spacing: 2px;
     text-transform: uppercase;
@@ -231,7 +233,9 @@
 
   .btn-secondary {
     font-family: 'Inter', sans-serif;
-    font-size: 12px;
+    font-size: 13px;
+    line-height: 1.7;
+    letter-spacing: 0.2px;
     font-weight: 700;
     letter-spacing: 2px;
     text-transform: uppercase;
@@ -615,7 +619,9 @@
 
   .pcard-desc {
     font-family: 'Inter', sans-serif;
-    font-size: 12px;
+    font-size: 13px;
+    line-height: 1.7;
+    letter-spacing: 0.2px;
     color: #ffffff;
     margin-top: 8px;
   }
@@ -654,7 +660,9 @@
     max-width: 700px;
     margin: 24px auto 0;
     font-family: 'Inter', sans-serif;
-    font-size: 12px;
+    font-size: 13px;
+    line-height: 1.7;
+    letter-spacing: 0.2px;
     color: #ffffff;
     line-height: 1.7;
     border: 1px solid rgba(255,255,255,0.05);
@@ -978,7 +986,7 @@
 <section class="section" id="airdrop">
   <div class="section-label">01 — Airdrop</div>
   <h2 class="section-title">Claim Your <span>Free Tokens</span></h2>
-  <p style="max-width:600px;color:#ffffff;font-size:17px;margin-bottom:48px;">1,000,000 MADBULL tokens (0.1% of total supply) are reserved for the community. Complete simple tasks and claim your share of the airdrop.</p>
+  <p style="max-width:580px;color:rgba(255,255,255,0.88);font-size:14.5px;line-height:2;margin-bottom:48px;font-family:'Inter',sans-serif;text-align:justify;text-justify:inter-word;word-spacing:1px;">A total of <strong style="color:#4caf50;font-weight:600;">1,000,000 MADBULL tokens</strong> — representing 0.1% of the total supply — are exclusively allocated for community airdrop participants. Complete the steps below to secure your allocation.</p>
 
   <!-- TOP STATS ROW -->
   <div style="display:grid;grid-template-columns:repeat(3,1fr);gap:2px;margin-bottom:2px;">
@@ -1053,7 +1061,7 @@
 <section class="section" id="presale">
   <div class="section-label">02 — Presale</div>
   <h2 class="section-title">Presale <span>Opening Soon</span></h2>
-  <p style="max-width:600px;color:#ffffff;font-size:18px;margin-bottom:8px;">The MADBULL presale has not yet started. Register your interest now to receive priority whitelist access and be first to secure tokens at the launch price of <strong style="color:#4caf50;">$0.04</strong>.</p>
+  <p style="max-width:580px;color:rgba(255,255,255,0.88);font-size:14.5px;line-height:2;font-family:'Inter',sans-serif;text-align:justify;text-justify:inter-word;word-spacing:1px;margin-bottom:24px;">The MADBULL presale is <strong style="color:#ffa500;">not yet open.</strong> Early participants will secure tokens at the fixed presale price of <strong style="color:#4caf50;">$0.04</strong> — exclusively available during the presale window before public DEX listing.</p>
 
   <!-- PRESALE NOT STARTED BANNER -->
   <div style="margin-bottom:32px;padding:20px 28px;background:rgba(255,165,0,0.06);border:1px solid rgba(255,165,0,0.3);display:flex;align-items:center;gap:16px;flex-wrap:wrap;">
@@ -1114,38 +1122,38 @@
 <section class="section" id="utility">
   <div class="section-label">03 — Token Utility</div>
   <h2 class="section-title">The <span>MadBull</span><br>Gaming Ecosystem</h2>
-  <p style="max-width:640px;color:#ffffff;font-size:18px;">MADBULL powers an immersive knowledge-based gaming platform where intelligence is currency. Learn, compete, and earn in a world where your knowledge has real value.</p>
+  <p style="max-width:580px;color:rgba(255,255,255,0.88);font-size:14.5px;line-height:2;font-family:'Inter',sans-serif;text-align:justify;text-justify:inter-word;word-spacing:1px;margin-bottom:0;">MADBULL powers a next-generation knowledge-based gaming ecosystem where intelligence drives real value. Compete, learn, and earn — your knowledge is your greatest asset.</p>
 
   <div class="utility-grid">
     <div class="utility-card">
       <div class="card-icon">🎮</div>
       <div class="card-title">Gaming Currency</div>
-      <p style="font-size:15px;color:#ffffff;">MADBULL is the primary in-game currency used to enter tournaments, purchase items, and unlock exclusive game modes within the MadBull platform.</p>
+      <p style="font-size:13px;color:#ffffff;font-family:'Inter',sans-serif;line-height:1.7;letter-spacing:0.2px;">MADBULL is the primary in-game currency used to enter tournaments, purchase items, and unlock exclusive game modes within the MadBull platform.</p>
     </div>
     <div class="utility-card">
       <div class="card-icon">🏆</div>
       <div class="card-title">Tournament Rewards</div>
-      <p style="font-size:15px;color:#ffffff;">Players compete in knowledge challenges and trivia battles, earning MADBULL as rewards. Top performers receive bonus token distributions from the gaming allocation pool.</p>
+      <p style="font-size:13px;color:#ffffff;font-family:'Inter',sans-serif;line-height:1.7;letter-spacing:0.2px;">Players compete in knowledge challenges and trivia battles, earning MADBULL as rewards. Top performers receive bonus token distributions from the gaming allocation pool.</p>
     </div>
     <div class="utility-card">
       <div class="card-icon">🔓</div>
       <div class="card-title">Access & Governance</div>
-      <p style="font-size:15px;color:#ffffff;">Token holders gain voting rights on platform development, game content, and ecosystem decisions. Hold MADBULL to have a voice in the future of MadBull.</p>
+      <p style="font-size:13px;color:#ffffff;font-family:'Inter',sans-serif;line-height:1.7;letter-spacing:0.2px;">Token holders gain voting rights on platform development, game content, and ecosystem decisions. Hold MADBULL to have a voice in the future of MadBull.</p>
     </div>
     <div class="utility-card">
       <div class="card-icon">📚</div>
       <div class="card-title">MadBull NFTs</div>
-      <p style="font-size:15px;color:#ffffff;">Mint and trade MadBull NFTs representing mastery in specific subjects. Use MADBULL to acquire rare knowledge artifacts that grant gameplay advantages.</p>
+      <p style="font-size:13px;color:#ffffff;font-family:'Inter',sans-serif;line-height:1.7;letter-spacing:0.2px;">Mint and trade MadBull NFTs representing mastery in specific subjects. Use MADBULL to acquire rare knowledge artifacts that grant gameplay advantages.</p>
     </div>
     <div class="utility-card">
       <div class="card-icon">💎</div>
       <div class="card-title">Staking & Yield</div>
-      <p style="font-size:15px;color:#ffffff;">Stake your MADBULL tokens to earn passive yield from the platform's revenue. Longer lock periods yield higher APR rewards from game transaction fees.</p>
+      <p style="font-size:13px;color:#ffffff;font-family:'Inter',sans-serif;line-height:1.7;letter-spacing:0.2px;">Stake your MADBULL tokens to earn passive yield from the platform's revenue. Longer lock periods yield higher APR rewards from game transaction fees.</p>
     </div>
     <div class="utility-card">
       <div class="card-icon">🌐</div>
       <div class="card-title">DEX Liquidity</div>
-      <p style="font-size:15px;color:#ffffff;">10% of supply is dedicated to DEX liquidity, ensuring stable trading. MADBULL is freely tradable and swappable on leading decentralized exchanges.</p>
+      <p style="font-size:13px;color:#ffffff;font-family:'Inter',sans-serif;line-height:1.7;letter-spacing:0.2px;">10% of supply is dedicated to DEX liquidity, ensuring stable trading. MADBULL is freely tradable and swappable on leading decentralized exchanges.</p>
     </div>
   </div>
 </section>
@@ -1156,7 +1164,7 @@
 <section class="section" id="arbitrage">
   <div class="section-label">04 — AI Agentic Arbitrage</div>
   <h2 class="section-title">The <span>AI Engine</span><br>Behind MadBull</h2>
-  <p style="max-width:680px;color:#ffffff;font-size:18px;margin-bottom:60px;">MadBull's AI Agentic Arbitrage Platform deploys autonomous agents that scan, identify, and execute cross-exchange price discrepancies 24/7 — generating real yield for MADBULL token holders.</p>
+  <p style="max-width:580px;color:rgba(255,255,255,0.88);font-size:14.5px;line-height:2;font-family:'Inter',sans-serif;text-align:justify;text-justify:inter-word;word-spacing:1px;margin-bottom:60px;">MadBull's AI Agentic Arbitrage Platform operates a fleet of autonomous agents that continuously monitor cross-exchange price differentials, executing risk-calibrated trades 24/7 — converting market inefficiencies into consistent, distributed yield for MADBULL holders.</p>
 
   <!-- HOW IT WORKS -->
   <div style="display:grid;grid-template-columns:1fr 1fr;gap:3px;margin-bottom:3px;">
@@ -1168,28 +1176,28 @@
           <div style="min-width:36px;height:36px;background:rgba(76,175,80,0.1);border:1px solid rgba(76,175,80,0.35);display:flex;align-items:center;justify-content:center;font-family:'Bebas Neue',cursive;font-size:14px;font-weight:400;color:#ffffff;">01</div>
           <div>
             <div style="font-family:'Bebas Neue',cursive;font-size:16px;font-weight:400;color:#4caf50;margin-bottom:4px;">SCAN</div>
-            <p style="font-size:14px;color:#ffffff;">AI agents continuously monitor 50+ CEX & DEX markets in real time, detecting price spreads across trading pairs with millisecond precision.</p>
+            <p style="font-size:13.5px;color:rgba(255,255,255,0.88);font-family:'Inter',sans-serif;line-height:1.9;text-align:justify;text-justify:inter-word;word-spacing:1px;">AI agents continuously monitor 50+ CEX & DEX markets in real time, detecting price spreads across trading pairs with millisecond precision.</p>
           </div>
         </div>
         <div style="display:flex;gap:16px;align-items:flex-start;">
           <div style="min-width:36px;height:36px;background:rgba(76,175,80,0.1);border:1px solid rgba(76,175,80,0.35);display:flex;align-items:center;justify-content:center;font-family:'Bebas Neue',cursive;font-size:14px;font-weight:400;color:#ffffff;">02</div>
           <div>
             <div style="font-family:'Bebas Neue',cursive;font-size:16px;font-weight:400;color:#4caf50;margin-bottom:4px;">ANALYSE</div>
-            <p style="font-size:14px;color:#ffffff;">Machine learning models calculate profitability after gas, slippage, and fees — only executing trades where net profit exceeds the threshold.</p>
+            <p style="font-size:13.5px;color:rgba(255,255,255,0.88);font-family:'Inter',sans-serif;line-height:1.9;text-align:justify;text-justify:inter-word;word-spacing:1px;">Machine learning models calculate profitability after gas, slippage, and fees — only executing trades where net profit exceeds the threshold.</p>
           </div>
         </div>
         <div style="display:flex;gap:16px;align-items:flex-start;">
           <div style="min-width:36px;height:36px;background:rgba(76,175,80,0.1);border:1px solid rgba(76,175,80,0.35);display:flex;align-items:center;justify-content:center;font-family:'Bebas Neue',cursive;font-size:14px;font-weight:400;color:#ffffff;">03</div>
           <div>
             <div style="font-family:'Bebas Neue',cursive;font-size:16px;font-weight:400;color:#4caf50;margin-bottom:4px;">EXECUTE</div>
-            <p style="font-size:14px;color:#ffffff;">Autonomous agents flash-execute simultaneous buy/sell orders across exchanges, locking in risk-free arbitrage profit in a single atomic transaction.</p>
+            <p style="font-size:13.5px;color:rgba(255,255,255,0.88);font-family:'Inter',sans-serif;line-height:1.9;text-align:justify;text-justify:inter-word;word-spacing:1px;">Autonomous agents flash-execute simultaneous buy/sell orders across exchanges, locking in risk-free arbitrage profit in a single atomic transaction.</p>
           </div>
         </div>
         <div style="display:flex;gap:16px;align-items:flex-start;">
           <div style="min-width:36px;height:36px;background:rgba(76,175,80,0.1);border:1px solid rgba(76,175,80,0.35);display:flex;align-items:center;justify-content:center;font-family:'Bebas Neue',cursive;font-size:14px;font-weight:400;color:#ffffff;">04</div>
           <div>
             <div style="font-family:'Bebas Neue',cursive;font-size:16px;font-weight:400;color:#4caf50;margin-bottom:4px;">DISTRIBUTE</div>
-            <p style="font-size:14px;color:#ffffff;">Profits are automatically split — reinvested into the pool and distributed to MADBULL stakers as real yield rewards every epoch.</p>
+            <p style="font-size:13.5px;color:rgba(255,255,255,0.88);font-family:'Inter',sans-serif;line-height:1.9;text-align:justify;text-justify:inter-word;word-spacing:1px;">Profits are automatically split — reinvested into the pool and distributed to MADBULL stakers as real yield rewards every epoch.</p>
           </div>
         </div>
       </div>
@@ -1271,7 +1279,7 @@
   <div class="section" style="max-width:1100px;">
     <div class="section-label">05 — Tokenomics</div>
     <h2 class="section-title">Token<br><span>Distribution</span></h2>
-    <p style="font-size:18px;margin-bottom:60px;"><span style="color:#ffffff;">Total Supply:</span> <span style="color:#4caf50;font-family:'Bebas Neue',cursive;font-weight:700;">1,000,000,000 MADBULL</span> <span style="color:#ffffff;">— Carefully allocated for sustainable long-term growth.</span></p>
+    <p style="font-size:15px;line-height:1.8;margin-bottom:60px;font-family:'Inter',sans-serif;letter-spacing:0.3px;max-width:640px;"><span style="color:#ffffff;">Total Supply:</span> <span style="color:#4caf50;font-family:'Bebas Neue',cursive;font-weight:400;font-size:18px;">1,000,000,000 MADBULL</span> <span style="color:rgba(255,255,255,0.88);font-family:'Inter',sans-serif;font-size:14.5px;line-height:2;">— Distributed across nine strategic allocations, designed for long-term ecosystem sustainability, liquidity, and community growth.</span></p>
 
     <div class="tokenomics-inner">
       <!-- DONUT CHART INTERACTIVE -->
