--- a/index.html
+++ b/index.html
@@ -906,7 +906,7 @@
     </div>
   </div>
 
-  <div class="hero-tag fade-in">🐂 MadBull — The Knowledge Revolution</div>
+  <div class="hero-tag fade-in">MadBull — The Knowledge Revolution</div>
 
   <h1 class="fade-in delay-1" style="
     font-family:'Bebas Neue', cursive;
@@ -1050,7 +1050,7 @@
       <div style="font-family:'Bebas Neue',cursive;font-size:22px;color:#ffffff;letter-spacing:2px;margin-bottom:6px;">AIRDROP IS LIVE — CLAIM NOW</div>
       <div style="font-family:'Inter',sans-serif;font-size:14px;color:#ffffff;">Limited supply · First come, first served · No purchase required</div>
     </div>
-    <a href="https://airdrop-5eee.onrender.com" target="_blank" rel="noopener noreferrer" class="btn-primary" style="font-size:14px;padding:16px 40px;white-space:nowrap;">🐂 Claim Your Airdrop</a>
+    <a href="https://airdrop-5eee.onrender.com" target="_blank" rel="noopener noreferrer" class="btn-primary" style="font-size:14px;padding:16px 40px;white-space:nowrap;">Claim Your Airdrop</a>
   </div>
 
 </section>
