--- a/index.html
+++ b/index.html
@@ -1099,7 +1099,7 @@
     <div style="flex:1;min-width:240px;">
       <div style="font-family:'Bebas Neue',cursive;font-size:14px;font-weight:400;color:#4caf50;margin-bottom:16px;letter-spacing:2px;">HOW TO PARTICIPATE WHEN LIVE</div>
       <ol style="display:flex;flex-direction:column;gap:10px;padding-left:20px;">
-        <li style="font-size:16px;color:#ffffff;">Connect your wallet (MetaMask, WalletConnect)</li>
+        <li style="font-size:16px;color:#ffffff;">Connect your wallet </li>
         <li style="font-size:16px;color:#ffffff;">Choose your investment amount</li>
         <li style="font-size:16px;color:#ffffff;">Confirm transaction & receive MADBULL tokens</li>
         <li style="font-size:16px;color:#ffffff;">Tokens unlocked at DEX listing</li>
