--- a/index.html
+++ b/index.html
@@ -878,6 +878,7 @@
     <li><a href="#utility">Utility</a></li>
     <li><a href="#arbitrage">AI Arbitrage</a></li>
     <li><a href="#tokenomics">Tokenomics</a></li>
+    <li><a href="#whitepaper">Whitepaper</a></li>
   </ul>
   <div style="display:flex;align-items:center;gap:12px;">
     <a href="#presale" class="btn-primary" style="font-size:11px; padding:10px 24px;">BUY NOW</a>
@@ -894,6 +895,7 @@
   <a href="#utility" onclick="toggleMenu()">Utility</a>
   <a href="#arbitrage" onclick="toggleMenu()">AI Arbitrage</a>
   <a href="#tokenomics" onclick="toggleMenu()">Tokenomics</a>
+  <a href="#whitepaper" onclick="toggleMenu()">Whitepaper</a>
   <a href="#presale" onclick="toggleMenu()" style="color:#4caf50;font-weight:700;">🐂 Buy Now</a>
 </div>
 
@@ -1106,7 +1108,7 @@
     <div style="flex:1;min-width:240px;">
       <div style="font-family:'Bebas Neue',cursive;font-size:14px;font-weight:400;color:#4caf50;margin-bottom:16px;letter-spacing:2px;">HOW TO PARTICIPATE WHEN LIVE</div>
       <ol style="display:flex;flex-direction:column;gap:10px;padding-left:20px;">
-        <li style="font-size:16px;color:#ffffff;">Connect your wallet</li>
+        <li style="font-size:16px;color:#ffffff;">Connect your wallet </li>
         <li style="font-size:16px;color:#ffffff;">Choose your investment amount</li>
         <li style="font-size:16px;color:#ffffff;">Confirm transaction & receive MADBULL tokens</li>
         <li style="font-size:16px;color:#ffffff;">Tokens unlocked at DEX listing</li>
@@ -1473,6 +1475,86 @@
         </div>
       </div>
     </div>
+  </div>
+</section>
+
+<!-- WHITEPAPER SECTION -->
+<div class="divider"></div>
+<section class="section" id="whitepaper">
+  <div style="display:grid;grid-template-columns:1fr 1fr;gap:3px;align-items:stretch;">
+
+    <!-- LEFT: Info -->
+    <div style="background:var(--dark3);border:1px solid var(--border);padding:56px 48px;position:relative;overflow:hidden;">
+      <div style="position:absolute;top:0;left:0;right:0;height:2px;background:linear-gradient(90deg,#4caf50,var(--bull-blue),transparent);"></div>
+      <div class="section-label" style="margin-bottom:20px;">06 — Whitepaper</div>
+      <h2 class="section-title" style="margin-bottom:24px;">The MadBull<br><span>Blueprint</span></h2>
+      <p style="font-family:'Inter',sans-serif;font-size:14.5px;color:rgba(255,255,255,0.88);line-height:2;text-align:justify;text-justify:inter-word;word-spacing:1px;max-width:480px;margin-bottom:40px;">The MadBull Whitepaper is a comprehensive technical and economic document outlining the project's vision, tokenomics, AI arbitrage architecture, gaming ecosystem, governance model, and long-term roadmap. It serves as the definitive reference for investors, developers, and community members.</p>
+
+      <div style="display:flex;flex-direction:column;gap:14px;">
+        <div style="display:flex;align-items:center;gap:14px;">
+          <div style="width:6px;height:6px;background:#4caf50;border-radius:50%;flex-shrink:0;"></div>
+          <span style="font-family:'Inter',sans-serif;font-size:13px;color:rgba(255,255,255,0.8);">Tokenomics & supply distribution model</span>
+        </div>
+        <div style="display:flex;align-items:center;gap:14px;">
+          <div style="width:6px;height:6px;background:#4caf50;border-radius:50%;flex-shrink:0;"></div>
+          <span style="font-family:'Inter',sans-serif;font-size:13px;color:rgba(255,255,255,0.8);">AI Agentic Arbitrage technical architecture</span>
+        </div>
+        <div style="display:flex;align-items:center;gap:14px;">
+          <div style="width:6px;height:6px;background:#4caf50;border-radius:50%;flex-shrink:0;"></div>
+          <span style="font-family:'Inter',sans-serif;font-size:13px;color:rgba(255,255,255,0.8);">Knowledge gaming platform mechanics</span>
+        </div>
+        <div style="display:flex;align-items:center;gap:14px;">
+          <div style="width:6px;height:6px;background:#4caf50;border-radius:50%;flex-shrink:0;"></div>
+          <span style="font-family:'Inter',sans-serif;font-size:13px;color:rgba(255,255,255,0.8);">Governance & community voting framework</span>
+        </div>
+        <div style="display:flex;align-items:center;gap:14px;">
+          <div style="width:6px;height:6px;background:#4caf50;border-radius:50%;flex-shrink:0;"></div>
+          <span style="font-family:'Inter',sans-serif;font-size:13px;color:rgba(255,255,255,0.8);">Revenue sharing & staking yield model</span>
+        </div>
+        <div style="display:flex;align-items:center;gap:14px;">
+          <div style="width:6px;height:6px;background:#4caf50;border-radius:50%;flex-shrink:0;"></div>
+          <span style="font-family:'Inter',sans-serif;font-size:13px;color:rgba(255,255,255,0.8);">Project roadmap & milestone timeline</span>
+        </div>
+      </div>
+    </div>
+
+    <!-- RIGHT: Coming Soon -->
+    <div style="background:var(--dark3);border:1px solid var(--border);padding:56px 48px;position:relative;overflow:hidden;display:flex;flex-direction:column;align-items:center;justify-content:center;text-align:center;">
+      <div style="position:absolute;top:0;left:0;right:0;height:2px;background:linear-gradient(90deg,var(--bull-blue),transparent);"></div>
+
+      <!-- Document icon -->
+      <div style="width:80px;height:80px;background:rgba(76,175,80,0.08);border:1px solid rgba(76,175,80,0.25);display:flex;align-items:center;justify-content:center;margin-bottom:28px;">
+        <svg width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="#4caf50" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+          <polyline points="14 2 14 8 20 8"/>
+          <line x1="16" y1="13" x2="8" y2="13"/>
+          <line x1="16" y1="17" x2="8" y2="17"/>
+          <polyline points="10 9 9 9 8 9"/>
+        </svg>
+      </div>
+
+      <div style="font-family:'Bebas Neue',cursive;font-size:11px;letter-spacing:4px;color:#4caf50;margin-bottom:12px;">MADBULL WHITEPAPER V1.0</div>
+
+      <div style="font-family:'Bebas Neue',cursive;font-size:48px;font-weight:400;color:#ffffff;letter-spacing:2px;line-height:1;margin-bottom:8px;">COMING</div>
+      <div style="font-family:'Bebas Neue',cursive;font-size:48px;font-weight:400;color:#4caf50;letter-spacing:2px;line-height:1;margin-bottom:28px;">SOON</div>
+
+      <div style="padding:16px 24px;background:rgba(255,165,0,0.06);border:1px solid rgba(255,165,0,0.25);margin-bottom:32px;max-width:320px;">
+        <div style="font-family:'Bebas Neue',cursive;font-size:12px;letter-spacing:3px;color:#ffa500;margin-bottom:6px;">⏳ UNDER PREPARATION</div>
+        <div style="font-family:'Inter',sans-serif;font-size:12px;color:rgba(255,255,255,0.8);line-height:1.8;">Our technical team is currently finalising the whitepaper. Follow our official channels to be notified upon release.</div>
+      </div>
+
+      <div style="display:flex;gap:12px;flex-wrap:wrap;justify-content:center;">
+        <a href="https://x.com/mad_bull9" target="_blank" rel="noopener noreferrer" class="btn-secondary" style="font-size:11px;padding:10px 22px;display:flex;align-items:center;gap:8px;">
+          <svg width="14" height="14" viewBox="0 0 24 24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-4.714-6.231-5.401 6.231H2.746l7.73-8.835L1.254 2.25H8.08l4.253 5.622 5.911-5.622zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+          Notify on X
+        </a>
+        <a href="https://t.me/mad_bull9" target="_blank" rel="noopener noreferrer" class="btn-secondary" style="font-size:11px;padding:10px 22px;display:flex;align-items:center;gap:8px;">
+          <svg width="14" height="14" viewBox="0 0 24 24" fill="currentColor"><path d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm5.562 8.248-1.97 9.289c-.145.658-.537.818-1.084.508l-3-2.21-1.447 1.394c-.16.16-.295.295-.605.295l.213-3.053 5.56-5.023c.242-.213-.054-.333-.373-.12L6.28 14.607l-2.95-.924c-.64-.203-.653-.64.136-.953l11.57-4.461c.537-.194 1.006.131.526 1.979z"/></svg>
+          Notify on Telegram
+        </a>
+      </div>
+    </div>
+
   </div>
 </section>
 
