--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
   <a href="#arbitrage" onclick="toggleMenu()">AI Arbitrage</a>
   <a href="#tokenomics" onclick="toggleMenu()">Tokenomics</a>
   <a href="#whitepaper" onclick="toggleMenu()">Whitepaper</a>
-  <a href="#presale" onclick="toggleMenu()" style="color:#4caf50;font-weight:700;">🐂 Buy Now</a>
+  <a href="#presale" onclick="toggleMenu()" style="color:#4caf50;font-weight:700;"> Buy Now</a>
 </div>
 
 <!-- HERO -->
